# laserRobots

./: .gitignore  .gitignore.txt  README.md  filename.csv
Lights/Rainbow_effect/: Rainbow_effect.ino
Pathfinding - old/GUI/: GUI.code-workspace
Pathfinding - old/LaserAiming/: LaserAiming.py
Pathfinding/AStarAlgorithm/: AStarAlgorithm.code-workspace  AStarAlgorithm.py  AStar_Algorithm.py  Example.py  bob.csv  filename.csv
Pathfinding/GUI/: .gitignore  GUI.code-workspace  __main__.py  cell.py  editor.py  filename.csv  grid.py  window.py
Pathfinding/LaserAiming/: LaserAiming.py
TCP/: .gitignore  __main__.py  client.py  server.py  tcp.py
aiming_ros/: CMakeLists.txt  package.xml
aiming_ros/src/: laseraiming.py
astar_ros/: CMakeLists.txt  package.xml
lasers/: laser.code-workspace
map/: __main__.py  collision.py  config.py  entity.py  filename.csv  game.py  interface.py  simlayer.py
map_ros/: CMakeLists.txt  package.xml
movement/: StepperMotorDriver.ino
pathfinding/: filename.csv
scoreboard/: scoreboard.code-workspace  scoreboard.py  test2.py
scoreboard_ros/: CMakeLists.txt  package.xml
scoreboard_ros/src/: scoreboard.py  scoreboard2.py
serial/: Serial_Communication.ino  Serial_com_pi.py  nano pi_duino.py  serial.code-workspace
serial_ros/: CMakeLists.txt  package.xml
sound_ros/: CMakeLists.txt  package.xml
sound_ros/src/: __main__.py  interface.py  soundfx.py
tactics_ros/: CMakeLists.txt  package.xml
vision/: mx2Vision.sln
visionPython/: contourDetection.py  oldCode.py  qrdetection.py
vision_ros/: CMakeLists.txt  package.xml
(+51 files in other folders)
